[package]
name = "dhaar-torrent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["display"] }
home-config = "0.7.0"
merge = "0.2.0"
num-traits = { version = "0.2.19", features = ["i128"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"

[dev-dependencies]
husky-rs = "0.3.3"
